Added more MPC details

--- a/OptimalControl.ipynb
+++ b/OptimalControl.ipynb
@@ -359,7 +359,7 @@
     "problem over the coefficients of the basis functions, and 4) optimizing\n",
     "using a gradient-based technique.\n",
     "\n",
-    "### Piecewise-constant control and state trajectories\n",
+    "### Direct transcription\n",
     "\n",
     "The main choice in trajectory optimization is how to represent a\n",
     "trajectory of controls? The most typical assumption is that the\n",
@@ -402,7 +402,7 @@
     "$$\\arg \\min_{u_1,\\ldots,u_N} \\tilde{J}(u_1,\\ldots,u_N).\n",
     "\\label{eq:DirectTranscription}$$\n",
     "With control space $\\mathbb{R}^m$, this is an\n",
-    "optimization problem over $mN$ variables.  This approach is also known\n",
+    "optimization problem over $mN$ variables.  This formulation is also known\n",
     "as _direct transcription_.\n",
     "\n",
     "There is a tradeoff in determining the resolution $N$. With higher\n",
@@ -1594,7 +1594,7 @@
     "code_folding": [
      0
     ],
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -2453,7 +2453,7 @@
     "------------------------\n",
     "\n",
     "The method of model predictive control (MPC) is a process for building a\n",
-    "closed-loop controller when given a method that computes open loop\n",
+    "closed-loop controller when given a method that computes open-loop\n",
     "trajectories. Generally speaking, it simply replans a new trajectory\n",
     "starting from the sensed state at each step. It executes some small\n",
     "portion of that trajectory, senses the new state, and then replans\n",
@@ -2461,37 +2461,103 @@
     "disturbances by dynamically calculating paths to return to desirable\n",
     "states.\n",
     "\n",
-    "There are, however, several caveats involved in successful application\n",
-    "of MPC. Let us define the steps more specifically. For a control loop\n",
-    "that operates at rate $\\Delta t$, perform the following steps:\n",
+    "Let us define this process more specifically. Suppose the control loop\n",
+    "operates at rate $\\Delta t$ and we have picked a time horizon $T$ for optimization,\n",
+    "where usually $T=N\\Delta t$ for an integer $N$. MPC performs the following steps:\n",
     "\n",
-    "1.  Sense the current state $x_c$\n",
+    "1.  Sense the current state $x_c$.\n",
     "\n",
-    "2.  Compute a finite-time optimal trajectory $x,u$ starting at\n",
-    "    $x(0) = x_c$.\n",
+    "2.  Compute a finite-horizon optimal trajectory $x,u$ with initial state\n",
+    "    $x(0) = x_c$. \n",
     "\n",
     "3.  Execute the control $u(t)$ for $t \\in [0,\\Delta t)$\n",
     "\n",
     "4.  Repeat from step 1.\n",
     "\n",
-    "There are several variables of note when creating an MPC approach.\n",
-    "First, the time step $\\Delta t$ must be long enough for step 2 to find\n",
-    "an optimal trajectory. Second, the time horizon used in step 2 is an\n",
-    "important variable, because it should be long enough for MPC to benefit\n",
-    "from predictive lookahead, but not too long to make computational time\n",
-    "exceed $\\Delta t$. Third, when recasting the problem as a finite-time\n",
-    "optimal control problem, the terminal cost should be somewhat\n",
-    "approximate the problem's value function, or else the system may not\n",
-    "converge properly. Finally, the optimization method used ought to be\n",
-    "extremely reliable. Failures in step 2 can be tolerated to some extent\n",
-    "simply by using the previous trajectory segment, but to achieve good\n",
-    "performance Step 2 should succeed regularly.\n",
-    "\n",
-    "Due to all of these variables, MPC is difficult to analyze, and as\n",
-    "employed in practice it usually does not satisfy many theoretical\n",
-    "stability / convergence properties. However, with careful tuning, MPC\n",
+    "Overall, as employed in practice MPC is a moderately complex procedure, and from a theoretical perspective it is difficult to analyze and prove stability / convergence properties. However, with careful tuning, MPC\n",
     "can be an extremely high performing and practical nonlinear optimal control\n",
-    "technique.\n"
+    "technique. There are several design decisions of note when implementing such a MPC controller:\n",
+    "\n",
+    "* The time step $\\Delta t$ must be long enough to allow the computation in step 2 to find\n",
+    "  an optimal trajectory.\n",
+    "* The time horizon $T$ used in step 2 is an important variable, because it should be\n",
+    "  long enough for MPC to benefit from predictive lookahead, but not too long such that computation time\n",
+    "  exceeds $\\Delta t$.\n",
+    "* When casting the problem as a finite-horizon optimal control problem, the terminal cost should\n",
+    "  approximate an infinite-horizon problem's value function to some extent, or else the closed-loop\n",
+    "  behavior of the system may not converge properly.\n",
+    "* The optimization method used ought to be extremely reliable, or else the system may need\n",
+    "  to resort to fall-back methods (described below) that would cause performance to degrade.\n",
+    "* The system moves during step 2, so that by the time the control $u(0)$ is computed, the system has moved from $x_c$, so it is no longer optimal for the actual state.  Achieving better performance requires considering real-time implementations (discussed below).\n",
+    "* Model mismatch between the true system's dynamics and the model used in the optimizer will, in general, degrade MPC performance.\n",
+    "\n",
+    "We will discuss some of these issues below.\n",
+    "\n",
+    "\n",
+    "### Initializing and running the optimizer\n",
+    "\n",
+    "The optimizer used in step 2 forms the core of the procedure, and variations in its implementation drastically affect the closed-loop performance.\n",
+    "\n",
+    "**Optimizer failures.** To achieve good MPC performance the optimizer should succeed regularly, but optimizer failures can be tolerated to some extent.  A straightforward fallback strategy is to maintain the previous trajectory segment and continue to execute the control computed by the previously optimized trajectory.  The pseudocode is as follows.\n",
+    "\n",
+    "1. Maintain state / control trajectory $\\tilde{x}, \\tilde{u}$.\n",
+    "\n",
+    "2. Sense the current state $x_c$\n",
+    "\n",
+    "3. Compute a finite-horizon optimal trajectory $x,u$ with initial state\n",
+    "    $x(0) = x_c$. \n",
+    "    \n",
+    "4. If optimization succeeds, set $\\tilde{x}\\gets x$, $\\tilde{u}\\gets u$. If optimization fails, time-shift $\\tilde{x}(t) \\gets \\tilde{x}(t+\\Delta t)$, $\\tilde{u}(t) \\gets \\tilde{u}(t+\\Delta t)$.  Execute the control $\\tilde{u}(t)$ for $t \\in [0,\\Delta t)$.\n",
+    "\n",
+    "5. Repeat from step 1.\n",
+    "\n",
+    "Some minor details include what to do if the optimizer fails on the first iteration, and how to set $\\tilde{u}$ if a series of failures occurs that shifts it beyond the end of the computed horizon.  By default we can execute the zero control until a success occurs, and we can extend the final control to an infinite horizon $\\tilde{u}(t)\\gets \\tilde{u}(T)$ for all $t > T$.\n",
+    "\n",
+    "**Optimizer initialization.**  For nonlinear optimal control problems, since local optimization is often used, the success and computation speed of MPC often depends on the availability of a good initial trajectory.  Otherwise, optimization can be extremely slow or the system can get stuck at a local optimum.  Unfortunately, there is often a design tradeoff between speed and robustness.\n",
+    "\n",
+    "To minimize computation time, we can make use of the principle that the optimal trajectory for the previous iteration should be close to optimal for the current iteration. This requires us to make a change to step 3 above such that the optimizer's initial guess is set to the previously optimized trajectory, time-shifted to the current timestep:\n",
+    "\n",
+    "3. Compute a finite-horizon optimal trajectory $x,u$ with initial state\n",
+    "    $x(0) = x_c$ and starting from initial guess $x_0(t) = \\tilde{x}(\\min(t + \\Delta t,T))$, $u_0(t) = \\tilde{u}(\\min(t + \\Delta t,T))$.\n",
+    "\n",
+    "This can make optimization very fast compared to, say, optimizing from all zeros.  A potential drawback of this method is that it can get stuck in local minima and fail to make progress. Another approach is to add \"diversity\" into the initialization procedure, e.g., via random restarts, so that there is a better chance of escaping local minima.  Step 3 then becomes:\n",
+    "\n",
+    "3. Compute a finite-horizon optimal trajectory $x,u$ with initial state\n",
+    "    $x(0) = x_c$ and starting from initial guess $x_0(t) = \\tilde{x}(\\min(t + \\Delta t,T))$, $u_0(t) = \\tilde{u}(\\min(t + \\Delta t,T))$.\n",
+    "    \n",
+    "    - Compute another finite-horizon optimal trajectory $x^\\prime,u^\\prime$ with initial state\n",
+    "    $x(0) = x_c$ and starting from a \"diverse\" initial guess (e.g., a random one).\n",
+    "    - If $x^\\prime,u^\\prime$ achieves a lower cost than $x,u$, then set $x\\gets x^\\prime$, $u\\gets u^\\prime$.\n",
+    "\n",
+    "This can be repeated for several diverse guesses, at the expense of additional computation.  The ultimate impact of these optimizations can be minimized by optimizing in parallel on multi-core CPUs.\n",
+    "\n",
+    "### Convergence and terminal conditions\n",
+    "\n",
+    "Suppose that our original optimal control problem is an infinite horizon one, with objective $J_\\infty(x,u) = \\int_0^\\infty L(x(t),u(t)) dt$.  MPC converts it to a finite horizon problem, $J_T(x,u) = \\int_0^T L(x(t),u(t)) dt + \\Phi(x(T))$ where we have a choice of terminal cost $\\Phi$. We should ask the questions, if the original infinite horizon problem has a stable point $x_0$, will it also be a stable point for MPC?  Will MPC converge to $x_0$ from some starting state $x_c$?  To make the following analysis hold, we assume that MPC indeed computes the finite-horizon optimal trajectory perfectly and that the true dynamics matches the model used by the optimizer.\n",
+    "\n",
+    "In general this is a difficult question to answer, but we can state a few things. Let's assume that $L(x,u)\\geq 0$ for all $x,u$, and that $L(x_0,u)=0$ for some $u$ satisfying $f(x_0,u)=0$ (indicating that indeed $x_0$ is a stationary point at which cost no longer accumulates).  Then:\n",
+    "- if $\\Phi(x)\\geq 0$ and $\\Phi(x_0)=0$, then $x_0$ is a stable point for MPC.\n",
+    "- if $\\Phi(x)$ is a [value function](#Derivation) $V(x)$ for the $J_\\infty$ problem, then MPC will converge to $x_0$ from any starting state $x_c$.\n",
+    "- if $\\Phi(x)$ is large for any $x \\neq x_0$, then MPC will converge to $x_0$ from any starting state $x_c$ that can reach $x_0$ within horizon $T$.\n",
+    "\n",
+    "Hence, most strategies for encouraging or ensuring stability are based on the second and third statements to modify the terminal conditions of the optimizer.  If we define an approximation of the infinite-horizon value function, $\\Phi(x) \\approx V(x)$, then MPC will generally converge quite well across the domain.  Furthermore, if we constrain the terminal state of the MPC optimization problem to be $x(T)=x_0$, then we can ensure convergence as well. The terminal constraint approach can be somewhat relaxed to constrain $x(T)$ to lie within a domain in which MPC is known to stabilize the system, or some alternative stabilizing controller is known to exist.\n",
+    "\n",
+    "### Real-time considerations\n",
+    "\n",
+    "Because the system timestep $\\Delta t$ must be large enough to perform the optimization, the system state can change significantly between the start and the end of computation, and so the control computed by naïve MPC can be inappropriate to use at the new current state $x_c$.  Generally, the larger the timestep, the worse the degradation in performance due to real-time considerations.\n",
+    "\n",
+    "**Concurrent execution and optimization.** Instead of interpreting the optimization and execution steps in the pseudocode as sequential, they should be viewed as running concurrently in time.  The execution thread continually reads from $\\tilde{x}$ and $\\tilde{u}$ and sends the controls to the actuators in real-time. When the MPC thread finishes computing and we say \"execute the control\", this really means that $\\tilde{x}$ and $\\tilde{u}$ are updated (atomically) so that the execution thread now reads from the new trajectories.\n",
+    "\n",
+    "**Any-time feasible optimization.** When choosing optimization algorithms, *any-time, feasible* methods are preferable. Rather than waiting until the optimizer converges to some numerical tolerance, we wish to halt optimization and take the best answer after $\\Delta t$ time has elapsed. A feasible method maintains iterates that are feasible so that the partially-optimized trajectory does not violate constraints regardless of when the optimizer is halted.\n",
+    "\n",
+    "**Next state prediction.** Approximately $\\Delta t$ time will pass between the start of optimization and the execution update. During this time, the execution thread will have executed the control $\\tilde{u}(t)$ from $t=0$ to $\\Delta t$, and the optimizer will have no control over the trajectory being executed.\n",
+    "\n",
+    "If we call the range $t\\in[0,\\Delta t]$ the \"immutable region\", then the best we can do is control the trajectory after the immutable region passes.  Hence, one approach can be to predict the state at which we will arrive once we finish optimization (e.g., simulating the dynamics with control $\\tilde{u}$ up to time $\\Delta t$.  Letting $\\hat{x}_p$ be the predicted state after the immutable region, we can then optimize starting from $\\hat{x}_p$ rather than $x_c$. This typically leads to significantly improved performance for large time steps.\n",
+    "\n",
+    "**Real-time iteration.** An even more sophisticated technique called RTI embeds repeated predicted state updates $\\hat{x}_p$ into the optimization loop, and can be helpful when prediction is inaccurate. Since the optimizer usually takes several iterations of some internal step (e.g., a gradient descent or Newton step) before convergence, if we update the initial state constraint $x(0)=\\hat{x}_p$ according to the latest prediction on each step, this will lead to progressively more accurate iterations as the optimizer proceeds.\n",
+    "\n",
+    "**Gain scheduling.** Gain scheduling is another approach to handling inaccurate predictions. In this approach, the optimizer does not simply compute a reference trajectory $x^{ref},u^{ref}$ but also computes a sequence of gain matrices $K(t)$ such that the control $u(t) = K(t)(x(t)-x^{ref}(t)) +u^{ref}(t)$ uses feedback on the reference tracking error $x(t)-x^{ref}(t)$ to determine the next control.  Methods like DDP and iLQR compute these matrices automatically during their execution, and they provide the optimal control assuming a linearization of the dynamics and a second-order Taylor expansion of the costs about the reference trajectory.  So, rather than having the execution thread execute an open-loop trajectory over the duration $[0,\\Delta t]$, it can execute the gain-scheduled policy in closed-loop during the next optimization iteration.\n",
+    "\n"
    ]
   },
   {
@@ -2594,7 +2660,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.10"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
@@ -2623,7 +2689,12 @@
    "title_cell": "Table of Contents",
    "title_sidebar": "Contents",
    "toc_cell": false,
-   "toc_position": {},
+   "toc_position": {
+    "height": "calc(100% - 180px)",
+    "left": "10px",
+    "top": "150px",
+    "width": "371px"
+   },
    "toc_section_display": true,
    "toc_window_display": true
   }
