Added more optimal control description, code examples

--- a/PlanningWithDynamicsAndUncertainty.ipynb
+++ b/PlanningWithDynamicsAndUncertainty.ipynb
@@ -250,9 +250,9 @@
     "\n",
     "Given a moving obstacle $O$ with configuration $q_O$, let $O(q_O(t))$, denote the region occupied by the obstacle in the workspace at future time $t$.  If $q_O(t)$ were known exactly, then the C-obstacle according to the obstacle is $CO(t) = \\{q \\in \\mathcal{C} \\,|\\, R(q) \\cap O(q_O(t)) \\neq \\emptyset \\}$.  The CT-obstacle is the union of all C-obstacles over future times in the CT space, namely:\n",
     "\n",
-    "$$\n",
+    "\\begin{equation}\n",
     "CTO(t) = \\{(q,t)\\,|\\, q \\in \\mathcal{C}, t \\geq t_{init}, \\text{ and } R(q) \\cap O(q_O(t)) \\neq \\emptyset \\}.\n",
-    "$$\n",
+    "\\end{equation}\n",
     "\n",
     "As an example, let us assume that the robot and object are planar disks with radii $r_R$ and $r_O$, and the object is moving at constant velocity $v$.  Taking time as a third (Z) dimension, we see that the CT-obstacle is a slanted cylinder obtained by extruding a circle of radius $r_R + r_O$ along the axis $(v_x,v_y,1)$.\n",
     "\n",
@@ -11721,7 +11721,9 @@
     "\n",
     "By defining the reward function and terminal set, we are asking the robot to select actions to obtain future rewards that are as high as possible.  A *rollout* of a behavior is a sequence of states and actions: $s_0, a_0, s_1, a_1, s_2, \\ldots$ either ending in a terminal state $S_T$, or continuing forever without hitting a terminal state. The *return* of a rollout is the sum of all rewards:\n",
     "\n",
-    "$$\\sum_{t=0}^{T-1} R(s_t,a_t,s_{t+1}) \\label{eq:Return} $$\n",
+    "\\begin{equation}\n",
+    "\\sum_{t=0}^{T-1} R(s_t,a_t,s_{t+1}) \\label{eq:Return}\n",
+    "\\end{equation}\n",
     "\n",
     "At state $s_t$ the robot cannot control exactly which value of $s_{t+1}$ it will arrive.  Instead, all it knows is that the probability distribution of $s_{t+1}$ is given by the transition distribution $T(s_t,a_t,s_{t+1})$.  So, it would like to maximize the expected return.\n",
     "\n",
@@ -11733,11 +11735,15 @@
     "\n",
     "We define the *value of a policy* $\\pi$ as a function $V_\\pi(s)$ that gives the expected return of executing $\\pi$ starting at $s$.  The expected return consists of the expected reward on the current action, plus the expected value for the subsequent states, calculated as follows:\n",
     "\n",
-    "$$V_\\pi(s) = \\sum_{s^\\prime \\in S} T(s,\\pi(s),s^\\prime) (R(s,\\pi(s),s^\\prime) + V_\\pi(s^\\prime)) \\label{eq:ValueOfPolicy}$$\n",
+    "\\begin{equation}\n",
+    "V_\\pi(s) = \\sum_{s^\\prime \\in S} T(s,\\pi(s),s^\\prime) (R(s,\\pi(s),s^\\prime) + V_\\pi(s^\\prime)) \\label{eq:ValueOfPolicy}\n",
+    "\\end{equation}\n",
     "\n",
     "An *optimal policy* is one in which the value of the policy is maximized over all possible policies.  The value of the optimal policy is also known as **the** value function $V^\\star$ (often, just denoted $V$).  A celebrated result is that the value function is required to satisfy the **Bellman equation**, which chooses the optimal action via a $\\max$ operation for any non-terminal nodes:\n",
     "\n",
-    "$$V(s) = \\max_{a\\in A} \\sum_{s^\\prime \\in S} T(s,a,s^\\prime) (R(s,a,s^\\prime) + V(s^\\prime)). \\label{eq:BellmanEquation}$$\n",
+    "\\begin{equation}\n",
+    "V(s) = \\max_{a\\in A} \\sum_{s^\\prime \\in S} T(s,a,s^\\prime) (R(s,a,s^\\prime) + V(s^\\prime)). \\label{eq:BellmanEquation}\n",
+    "\\end{equation}\n",
     "\n",
     "And $V(s)=0$ for any terminal $s\\in G$.\n",
     "\n",
@@ -11748,7 +11754,9 @@
     "\n",
     "The optimal policy $\\pi^\\star(s)$ is simply given by replacing the $\\max$ with an $\\arg \\max$:\n",
     "\n",
-    "$$\\pi^\\star(s) = \\arg \\max_{a\\in A} \\sum_{s^\\prime \\in S} T(s,a,s^\\prime) (R(s,a,s^\\prime) + V(s^\\prime)). \\label{eq:OptimalPolicy}$$\n",
+    "\\begin{equation}\n",
+    "\\pi^\\star(s) = \\arg \\max_{a\\in A} \\sum_{s^\\prime \\in S} T(s,a,s^\\prime) (R(s,a,s^\\prime) + V(s^\\prime)). \\label{eq:OptimalPolicy}\n",
+    "\\end{equation}\n",
     "\n",
     "Ties may be broken arbitrarily.\n",
     "\n",
@@ -11780,26 +11788,43 @@
     "\n",
     "**Discounting**.  The MDP defined above is called an *undiscounted* MDP.  It is common to consider *discounted* MDPs where future rewards are reduced in value the later they are received.  This approach causes the robot to prefer shorter-term rewards over equivalent long-term rewards.  The most common *geometric discounting* method replaces the undiscounted return $\\eqref{eq:Return}$ with the discounted return\n",
     "\n",
-    "$$\\sum_{t=0}^{T-1} \\gamma^t R(s_t,a_t,s_{t+1}) \\label{eq:DiscountedReturn} $$\n",
+    "\\begin{equation}\n",
+    "\\sum_{t=0}^{T-1} \\gamma^t R(s_t,a_t,s_{t+1}) \\label{eq:DiscountedReturn}\n",
+    "\\end{equation}\n",
     "\n",
     "where $\\gamma$ is the *discount factor*, $\\gamma \\in (0,1]$.  The case $\\gamma=1$ is equivalent to the undiscounted $\\eqref{eq:Return}$, and for smaller $\\gamma$ the robot will ignore larger rewards that take a long time to reach.  This is an approximate model of economic behavior, since the inflation-adjusted value of a dollar is less 10 years from now than it is now.\n",
     "\n",
     "One reason why geometric discounting is so popular is that it leads to extremely mathematically-convenient expressions for the discounted value of a policy and the discounted Bellman equation. All we need to do is insert a factor of $\\gamma$ into $\\eqref{eq:ValueOfPolicy}$ and $\\eqref{eq:BellmanEquation}$ as follows:\n",
     "\n",
-    "$$V_\\pi(s) = \\sum_{s^\\prime \\in S} T(s,\\pi(s),s^\\prime) (R(s,\\pi(s),s^\\prime) + \\gamma V_\\pi(s^\\prime)) \\label{eq:DiscountedValueOfPolicy}$$\n",
+    "\\begin{equation}\n",
+    "V_\\pi(s) = \\sum_{s^\\prime \\in S} T(s,\\pi(s),s^\\prime) (R(s,\\pi(s),s^\\prime) + \\gamma V_\\pi(s^\\prime)) \\label{eq:DiscountedValueOfPolicy}\n",
+    "\\end{equation}\n",
     "\n",
-    "$$V(s) = \\max_{a\\in A} \\sum_{s^\\prime \\in S} T(s,a,s^\\prime) (R(s,a,s^\\prime) + \\gamma V(s^\\prime)). \\label{eq:DiscountedBellmanEquation}$$\n",
+    "\\begin{equation}\n",
+    "V(s) = \\max_{a\\in A} \\sum_{s^\\prime \\in S} T(s,a,s^\\prime) (R(s,a,s^\\prime) + \\gamma V(s^\\prime)). \\label{eq:DiscountedBellmanEquation}\n",
+    "\\end{equation}\n",
     "\n",
     "Interestingly, it also leads to provable existence of an optimal solution for MDP.\n",
     "\n",
     "To show why this is the case, let us order all of the states in $S$ as integers, so that we can represent the value function $V_\\pi$ as a vector $\\mathbf{v}$ of length $|S|$.  Given $\\pi$, let us also define the $|S| \\times |S|$ transition matrix $T_\\pi$ where the entry corresponding to column $s$ and row $s^\\prime$ gives the transition probability $T(s,\\pi(s),s^\\prime)$.  For all terminal states $s$, let the row and column of $T_\\pi$ corresponding to $s$ be all zeroes except the $(s,s)$ entry, which takes the value of 1.  We will also define the length-$|S|$ reward vector $\\mathbf{r}$ where the entry corresponding to $s$ is $\\sum_{s^\\prime \\in S} T(s,\\pi(s),s^\\prime) R(s,\\pi(s),s^\\prime)$.\n",
     "\n",
     "With this definition, it can be seen that the expression $\\eqref{eq:DiscountedValueOfPolicy}$ of the value function can be written as\n",
-    "$$\\mathbf{v} = \\mathbf{r} + \\gamma T_\\pi \\mathbf{v}.$$\n",
+    "\\begin{equation}\n",
+    "\\mathbf{v} = \\mathbf{r} + \\gamma T_\\pi \\mathbf{v}.\n",
+    "\\end{equation}\n",
+    "\n",
     "By rearranging, we get the expression\n",
-    "$$(I - \\gamma T_\\pi) \\mathbf{v} = \\mathbf{r}$$\n",
+    "\n",
+    "\\begin{equation}\n",
+    "(I - \\gamma T_\\pi) \\mathbf{v} = \\mathbf{r}\n",
+    "\\end{equation}\n",
+    "\n",
     "and if $I - \\gamma T_\\pi$ is invertible, we can solve via matrix inversion:\n",
-    "$$\\mathbf{v} = (I - \\gamma T_\\pi)^{-1} \\mathbf{r}. \\label{eq:MDPInversion}$$\n",
+    "\n",
+    "\\begin{equation}\n",
+    "\\mathbf{v} = (I - \\gamma T_\\pi)^{-1} \\mathbf{r}.\n",
+    "\\label{eq:MDPInversion}\n",
+    "\\end{equation}\n",
     "\n",
     "In the undiscounted ($\\gamma=1$) case, $T_\\pi$ may contain some entries with value 1, e.g., terminal states have 1 on the diagonal.  So, showing that $(I - T_\\pi)\\mathbf{v} = \\mathbf{r}$ has a solution is rather non-trivial and requires assumptions about the structure of $T_\\pi$.  However, in the discounted ($\\gamma < 1$) case, every entry of $\\gamma T_\\pi$ is in the range $[0,\\gamma]$ (and also $[0,1)$).  Moreover, each row of $T_\\pi$ sums to 1, so the sum of the values of row $s$ minus the diagonal is just $1-T_\\pi[s,s]$.  Hence, considering row $s$ of $I - \\gamma T_\\pi$, the diagonal entry is $1 - \\gamma T_\\pi[s,s]$, and the off-diagonal entries sum to $-\\gamma (1-T_\\pi[s,s])$.  Since $1 - \\gamma T_\\pi[s,s] > \\gamma (1-T_\\pi[s,s])$, the matrix is strictly diagonally dominant, which implies that it has an inverse.\n",
     "\n",
@@ -11820,7 +11845,9 @@
     "\n",
     "More precisely, the Bellman update step 3 assigns the value of 0 to all terminal nodes, and performs the following assignment for all non-terminal nodes:\n",
     "\n",
-    "$$V^t(s) \\gets \\max_{a\\in A} \\sum_{s^\\prime \\in S} T(s,a,s^\\prime) (R(s,a,s^\\prime) + \\gamma V^{t-1}(s^\\prime)). \\label{eq:BellmanUpdate}$$\n",
+    "\\begin{equation}\n",
+    "V^t(s) \\gets \\max_{a\\in A} \\sum_{s^\\prime \\in S} T(s,a,s^\\prime) (R(s,a,s^\\prime) + \\gamma V^{t-1}(s^\\prime)). \\label{eq:BellmanUpdate}\n",
+    "\\end{equation}\n",
     "\n",
     "Value iteration has some interesting properties:\n",
     "\n",
@@ -22368,7 +22395,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -22382,7 +22409,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.11.3"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": false,
