--- a/Book.ipynb
+++ b/Book.ipynb
@@ -13,7 +13,7 @@
     "\n",
     "University of Illinois at Urbana-Champaign\n",
     "\n",
-    "Last update: 12/28/2020"
+    "Last update: 6/12/2023"
    ]
   },
   {
@@ -53,7 +53,7 @@
     "  * [Chapter 14. Robot dynamics](RobotDynamics.ipynb) **incomplete**\n",
     "  * [Chapter 15. Stabilizing controlled systems](Control.ipynb) **50% complete**\n",
     "  * [Chapter 16. Control of articulated robots](RobotControl.ipynb) **text 95% complete, figures 75% complete**\n",
-    "  * [Chapter 17. Optimal control](OptimalControl.ipynb) **text 95% complete, figures 0% complete**\n",
+    "  * [Chapter 17. Optimal control](OptimalControl.ipynb) **text 95% complete, figures 20% complete**\n",
     "\n",
     "* Section V. Perception **incomplete**\n",
     "  * Chapter 18.  State estimation\n",
@@ -297,7 +297,7 @@
    "toc_visible": true
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -311,7 +311,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.11.3"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
