--- a/MotionPlanningHigherDimensions.ipynb
+++ b/MotionPlanningHigherDimensions.ipynb
@@ -1278,7 +1278,7 @@
     "manifold constraints without a need for parameterization; these\n",
     "techniques generate samples by projecting them onto the feasible\n",
     "manifold, and also constructing paths that move along the manifold.\n",
-    "These will be discussed later... (TODO: where will manipulation planning be added?)"
+    "These will be discussed later in [Chapter 12.3](AdvancedTopicsInPlanning.ipynb#Manipulation-planning-and-locomotion-planning)"
    ]
   },
   {
@@ -1606,7 +1606,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1620,7 +1620,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.11.3"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
